# AmitSegalAISummarizer

./: .gitignore  README.md  bot.py  consts.py  main.py  mysession.session-journal  pyproject.toml  run_my_program.sh  util.py
